--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.2
-yarn_mappings=1.21.2+build.1
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
 loader_version=0.16.14
+loom_version=1.10-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.0-1.21.2
+mod_version=1.0.0-1.21.3
 maven_group=net.postoronnim.mobsoftheunderground
 archives_base_name=mobsoftheunderground
 
 # Dependencies
-fabric_version=0.106.1+1.21.2
+fabric_version=0.114.0+1.21.3
